# plextvstation

./: .gitignore  Dockerfile  MANIFEST.in  README.md  bootstrap  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  tox.ini
plextvstation/: __init__.py  __main__.py  args.py  config.py  logging.py  media.py  plex.py  schedule.py  station.py  types.py  utils.py
plextvstation/web/: __init__.py  app.py
plextvstation/web/static/: index.html
tests/: test_util.py
